# jdkman

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  release.yml
java-manager-cli/: Cargo.toml
java-manager-cli/src/: main.rs
java-manager-core/: Cargo.toml
java-manager-core/src/: config.rs  doctor.rs  env.rs  errors.rs  java.rs  lib.rs  models.rs  operations.rs  platform.rs  process.rs  scan.rs
java-manager-desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
java-manager-desktop/scripts/: prepare-cli-resource.mjs
java-manager-desktop/src/: App.tsx  index.css  main.tsx
java-manager-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
java-manager-desktop/src-tauri/capabilities/: default.json
java-manager-desktop/src-tauri/icons/: icon.icns
java-manager-desktop/src-tauri/resources/: jdkman
java-manager-desktop/src-tauri/src/: commands.rs  main.rs
java-manager-desktop/src-tauri/windows/: hooks.nsh
java-manager-desktop/src/components/: Button.tsx  Card.tsx  ConfirmModal.tsx  Sidebar.tsx  StatusBadge.tsx  Toast.tsx  TopBar.tsx
java-manager-desktop/src/context/: ThemeContext.tsx  ToastContext.tsx
java-manager-desktop/src/lib/: api.ts  types.ts
java-manager-desktop/src/pages/: Dashboard.tsx  Doctor.tsx  Scan.tsx  Settings.tsx  Versions.tsx
public-web/: OPUS_PROMPT.md  README.md  package-lock.json  package.json
public-web/app/: globals.css  layout.tsx  page.tsx  site.ts  sitemap.ts
public-web/app/components/: site-chrome.tsx
public-web/app/download/: page.tsx
public-web/app/getting-started/: page.tsx
public-web/app/guides/fix-java-home-path-windows/: page.tsx
public-web/app/guides/manage-multiple-jdks-windows/: page.tsx
public-web/app/guides/switch-java-version-windows/: page.tsx
