[workspace]
members = [
    "java-manager-core",
    "java-manager-cli",
    "java-manager-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["JDK Manager"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
