[package]
name = "java-manager-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
