[package]
name = "java-manager-desktop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "java-manager-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
java-manager-core = { path = "../../java-manager-core" }
serde = { workspace = true }
serde_json = { workspace = true }
